Dashboard fixed receiving modal view on mobile and width resolution, fixed hide and show functional of message modal.

--- a/css/message-modal.css
+++ b/css/message-modal.css
@@ -20,7 +20,7 @@
   #messageModal .msg-body {
     color: #fff;
     text-align: center;
-    font-size: 1.2em;
+    font-size: 1.1em;
     font-weight: 600;
   }
   #messageModal .msgbox-header,
