--- a/css/modal.css
+++ b/css/modal.css
@@ -103,6 +103,9 @@
   vertical-align: middle;
   margin: auto;
 }
+.modal-dialog .modal-body{
+  padding: 15px 1em 3.2em 1em;
+}
 .modal .modal-header {
   color: #FFF;
   font-weight: 700;
